--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
                     showMoreButton: true,
                     showSlider: true,
                     showDots: true,
-                    totalPages: 200,
+                    totalPages: 25,
+                    currentPage: 1,
                     order: 'forward',
-                    linksCount: 'max',
+                    linksCount: 8,
                     resultContainer: '#result'
                 });
             });
@@ -36,7 +37,7 @@
                         <div class="apg-pages">
                             <a href="#1" class="apg-link">1</a>
                             <a href="#2" class="apg-link">2</a>
-                            <span class="apg-link active">3</span>
+                            <a href="#3" class="apg-link active">3</span>
                             <a href="#4" class="apg-link">4</a>
                             <a href="#5" class="apg-link">5</a>
                             <a href="#6" class="apg-link">6</a>
