Show dots and correct scroll area

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     showSlider: true,
                     showDots: true,
                     totalPages: 25,
-                    currentPage: 1,
-                    order: 'forward',
+                    currentPage: 12,
+                    order: 'reverse',
                     linksCount: 8,
                     resultContainer: '#result'
                 });
