Click events, load data.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     showMoreButton: true,
                     showSlider: true,
                     showDots: true,
+                    showNextPrevButtons: false,
                     totalPages: 25,
                     currentPage: 12,
                     order: 'reverse',
